--- a/jt-eventos/src/index.html
+++ b/jt-eventos/src/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>JtEventos</title>
+  <title>JT Eventos</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <header>
+    <app-nav-bar></app-nav-bar>
+  </header>
+
   <app-root></app-root>
+
+  <footer>
+    <app-footer-bar></app-footer-bar>
+  </footer>
 </body>
 </html>
