--- a/jt-eventos/src/index.html
+++ b/jt-eventos/src/index.html
@@ -1,21 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>JT Eventos</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <header>
-    <app-nav-bar></app-nav-bar>
-  </header>
+  <head>
+    <meta charset="utf-8" />
+    <title>JT Eventos</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <header>
+      <app-nav-bar></app-nav-bar>
+    </header>
 
-  <app-root></app-root>
+    <app-root></app-root>
+    <app-users-table></app-users-table>
+    <app-event-types-create></app-event-types-create>
+    <app-event-types-details></app-event-types-details>
+    <app-event-types-edit></app-event-types-edit>
 
-  <footer>
-    <app-footer-bar></app-footer-bar>
-  </footer>
-</body>
+    <footer>
+      <app-footer-bar></app-footer-bar>
+    </footer>
+  </body>
 </html>
