criação dos componentes

--- a/jt-eventos/src/index.html
+++ b/jt-eventos/src/index.html
@@ -13,10 +13,21 @@
     </header>
 
     <app-root></app-root>
+    
     <app-users-table></app-users-table>
+    <app-users-create></app-users-create>
+    <app-users-details></app-users-details>
+    <app-users-edit></app-users-edit>
+
+    <app-event-types-table></app-event-types-table>
     <app-event-types-create></app-event-types-create>
     <app-event-types-details></app-event-types-details>
     <app-event-types-edit></app-event-types-edit>
+    
+    <app-customers-create></app-customers-create>
+    <app-customers-table></app-customers-table>
+    <app-customers-details></app-customers-details>
+    <app-customers-edit></app-customers-edit>
 
     <footer>
       <app-footer-bar></app-footer-bar>
