criação e estilização dos componentes de estabelecimentos e eventos

--- a/jt-eventos/src/index.html
+++ b/jt-eventos/src/index.html
@@ -29,6 +29,17 @@
     <app-customers-details></app-customers-details>
     <app-customers-edit></app-customers-edit>
 
+    <app-establishments-table></app-establishments-table>
+    <app-establishments-create></app-establishments-create>
+    <app-establishments-details></app-establishments-details>
+    <app-establishments-edit></app-establishments-edit>
+
+    <app-events-table></app-events-table>
+    <app-events-create></app-events-create>
+    <app-events-details></app-events-details>
+    <app-events-edit></app-events-edit>
+    <app-events-report></app-events-report>
+
     <footer>
       <app-footer-bar></app-footer-bar>
     </footer>
