criação dos modais de alerta e ajustes pontuais no layout

--- a/jt-eventos/src/index.html
+++ b/jt-eventos/src/index.html
@@ -38,10 +38,11 @@
     <app-events-create></app-events-create>
     <app-events-details></app-events-details>
     <app-events-edit></app-events-edit>
-    <app-events-report></app-events-report>
+
+    <app-authentication></app-authentication>
 
     <footer>
-      <app-footer-bar></app-footer-bar>
+      <app-footer></app-footer>
     </footer>
   </body>
 </html>
