criação das rotas, criação do componente de home, ajustes pontuais nas implementações existentes

--- a/jt-eventos/src/index.html
+++ b/jt-eventos/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <title>JT Eventos</title>
@@ -8,24 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <header>
-      <app-nav-bar></app-nav-bar>
-    </header>
-
-    <main>
-      <div class="container">
-        <app-root></app-root>
-
-        <app-users-table></app-users-table>
-        <app-event-types-table></app-event-types-table>
-        <app-customers-table></app-customers-table>
-        <app-establishments-table></app-establishments-table>
-        <app-events-table></app-events-table>
-      </div>
-    </main>
-
-    <footer>
-      <app-footer></app-footer>
-    </footer>
+    <app-root></app-root>
   </body>
 </html>
